--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="fn">Fathers name</string>
     <string name="gn">Group number</string>
     <string name="fac">Faculty (FITAC 4ever)</string>
+    <string name="message"> Welcome to new background color </string>>
 </resources>
